--- a/fotografie.html
+++ b/fotografie.html
@@ -6,6 +6,9 @@
 
 
 <link href="css/stylesheet.css" rel="stylesheet" media="screen, projection"/>
+<link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body class="beige">
