--- a/illustrationen.html
+++ b/illustrationen.html
@@ -10,6 +10,10 @@
 
 
 <link href="css/stylesheet.css" rel="stylesheet" media="screen, projection"/>
+<link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+
+
 </head>
 
 <body class="beige">
@@ -36,6 +40,8 @@
       <img class="illu" src="images/sketches/teleskop.jpg"/>
 
       <img class="illu" src="images/sketches/klavier.JPG"/>
+
+      <img class="illu" src="images/sketches/mond.jpg"/>
 
       <img class="illu" src="images/sketches/bananesw.jpg"/>
 
