--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 
 <link href="css/stylesheet.css" rel="stylesheet" media="screen, projection"/>
+<!---Schrift--->
+<link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 </head>
 
 <body id="auto">
@@ -25,7 +28,7 @@
 
 
     <div id="fotography" class="gallery">
-    <p><span class="bigger">WILLKOMMEN...</span><br>
+    <p class="welcome"><span class="bigger">WILLKOMMEN...</span><br>
       Diese Seite wird immernoch bearbeitet.<br>
       Schau' dich trotzdem schonmal um. <br>
       Um mehr zu sehen, einfach runterscrollen<br>
