--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div id="fotography" class="gallery">
     <p class="welcome"><span class="bigger">WILLKOMMEN...</span><br>
-      Diese Seite wird immernoch bearbeitet.<br>
+      Diese Seite bekommt momentan noch den letzten Schliff.<br>
       Schau' dich trotzdem schonmal um. <br>
       Um mehr zu sehen, einfach runterscrollen<br>
       und durchklicken!</p>
