--- a/fotografie.html
+++ b/fotografie.html
@@ -1,44 +1,34 @@
+<!DOCTYPE html>
+
+<html>
+
 <head>
 
 <meta charset="utf-8">
 
-<title>Mai Mi - Fotogallerie</title>
+<title>Mai Mi - Skizzen</title>
 
 
 <link href="css/stylesheet.css" rel="stylesheet" media="screen, projection"/>
 <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 
+
 </head>
 
-<body class="beige">
+<body style="margin-top: 0" style="background-color: rgba(255, 255, 255, 0.8)">
 
   <div class="header">
       <div class="bothbuttons">
         <a class="menu" href="index.html"><div class="button">Home</div></a>
+        <a class="menu" href="mailto:maimi.mirbach@gmx.de"><div class="button">Contact</div></a>
         <a class="menu" href="impressum.html"><div class="button">Impressum</div></a>
       </div>
     </div>
 
-    <div id="foto" class="gallery">
-      <img src="images/fotography/kid.jpg"/>
-      <img src="images/fotography/kidtwo.jpg"/>
-      <img src="images/fotography/kidthree.jpg"/>
-      <img src="images/fotography/treestone.jpg"/>
-      <img src="images/fotography/leaf.jpg"/>
-      <img src="images/fotography/forest.jpg"/>
-      <img src="images/fotography/tree.jpg"/>
-      <img src="images/fotography/mirror.jpg"/>
-      <img src="images/fotography/beach.jpg"/>
-      <img src="images/fotography/munkemose.jpg"/>
-      <img src="images/fotography/munkemosetwo.jpg"/>
-      <img src="images/fotography/munkemosethree.jpg"/>
-    </div>
-
-
-
-
-
-<div class="space"></div>
+<div class="scroll-box">
+  <img class="scrollbar-fotos" src="images/fotography/scrollbarfotos.jpg"/>
+</div>
 
 </body>
+</html>
