--- a/illustrationen.html
+++ b/illustrationen.html
@@ -16,59 +16,32 @@
 
 </head>
 
-<body class="beige">
+<body style="background-color: rgba(255, 255, 255, 0.8)">
 
   <div class="header">
       <div class="bothbuttons">
         <a class="menu" href="index.html"><div class="button">Home</div></a>
+        <a class="menu" href="mailto:maimi.mirbach@gmx.de"><div class="button">Contact</div></a>
         <a class="menu" href="impressum.html"><div class="button">Impressum</div></a>
       </div>
     </div>
+  <div class="sketches">
+<div><h3>Scrolle nach rechts und nach links</h3></div>
 
 
 
-    <div id="poem" class="gallery">
-
-      <img class="illu" src="images/sketches/stammbaumzwei.jpg"/>
-
-      <img class="illu" src="images/sketches/stammbaum.jpg"/>
-
-      <img class="illu" src="images/sketches/akt.jpg"/>
-
-      <img class="illu" src="images/sketches/flasche.JPG"/>
-
-      <img class="illu" src="images/sketches/teleskop.jpg"/>
-
-      <img class="illu" src="images/sketches/klavier.JPG"/>
-
-      <img class="illu" src="images/sketches/mond.jpg"/>
-
-      <img class="illu" src="images/sketches/bananesw.jpg"/>
-
-      <img class="illu" src="images/sketches/bananebunt.jpg"/>
-
-      <img class="illu" src="images/sketches/bananestein.jpg"/>
-
-      <img class="illu" src="images/sketches/mann.jpg"/>
-
-      <img class="illu" src="images/sketches/jungesw.jpg"/>
-
-      <img class="illu" src="images/sketches/jungebunt.jpg"/>
-
-        <img class="illu" src="images/sketches/teenbunt.jpg"/>
-
-      <img class="illu" src="images/sketches/teensw.jpg"/>
-
-
-
-
-
-      <div class="space"></div>
-
-
+    <div class="scroll-box">
+      <img class="scrollbar-pen" src="images/illus/scrollbarpen.jpg"/>
     </div>
 
+    <div class="scroll-box">
+      <img class="scrollbar" src="images/orange/scrollbarorange.jpg"/>
+    </div>
 
+    <div class="scroll-box">
+      <img class="scrollbar-fineliner" src="images/illus/scrollbarfineliner.jpg"/>
+    </div>
+  </div>
 
 </body>
 </html>
