--- a/impressum.html
+++ b/impressum.html
@@ -22,6 +22,7 @@
   <div class="header">
       <div class="bothbuttons">
         <a class="menu" href="index.html"><div class="button">Home</div></a>
+        <a class="menu" href="mailto:maimi.mirbach@gmx.de"><div class="button">Contact</div></a>
         <a class="menu" href="impressum.html"><div class="button">Impressum</div></a>
       </div>
     </div>
