--- a/typografie.html
+++ b/typografie.html
@@ -20,6 +20,7 @@
   <div class="header">
       <div class="bothbuttons">
         <a href="index.html"><div class="button">Home</div></a>
+        <a class="menu" href="mailto:maimi.mirbach@gmx.de"><div class="button">Contact</div></a>
         <a href="impressum.html"><div class="button">Impressum</div></a>
       </div>
     </div>
