--- a/fotografie.html
+++ b/fotografie.html
@@ -6,7 +6,7 @@
 
 <meta charset="utf-8">
 
-<title>Mai Mi - Skizzen</title>
+<title>Mai Mi - Fotos</title>
 
 
 <link href="css/stylesheet.css" rel="stylesheet" media="screen, projection"/>
@@ -22,11 +22,10 @@
       <div class="bothbuttons">
         <a class="menu" href="index.html"><div class="button">Home</div></a>
         <a class="menu" href="mailto:maimi.mirbach@gmx.de"><div class="button">Contact</div></a>
-        <a class="menu" href="impressum.html"><div class="button">Impressum</div></a>
       </div>
     </div>
 
-<div class="scroll-box">
+<div class="scroll-box-fotos">
   <img class="scrollbar-fotos" src="images/fotography/scrollbarfotos.jpg"/>
 </div>
 
