--- a/illustrationen.html
+++ b/illustrationen.html
@@ -22,13 +22,12 @@
       <div class="bothbuttons">
         <a class="menu" href="index.html"><div class="button">Home</div></a>
         <a class="menu" href="mailto:maimi.mirbach@gmx.de"><div class="button">Contact</div></a>
-        <a class="menu" href="impressum.html"><div class="button">Impressum</div></a>
       </div>
     </div>
-  <div class="sketches">
-<div><h3>Scrolle nach rechts und nach links</h3></div>
 
 
+  <div class="sketches clearfix">
+    <div><h3>Scrolle nach rechts und nach links</h3></div>
 
     <div class="scroll-box">
       <img class="scrollbar-pen" src="images/illus/scrollbarpen.jpg"/>
