--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-
 <!DOCTYPE html>
 
 <html>
+
 
 <head>
 
@@ -11,54 +11,38 @@
 
 
 <link href="css/stylesheet.css" rel="stylesheet" media="screen, projection"/>
-<!---Schrift--->
 <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
+
+
 </head>
 
-<body id="auto">
-
+<body class="blank">
 
   <div class="header">
       <div class="bothbuttons">
         <a class="menu" href="index.html"><div class="button">Home</div></a>
         <a class="menu" href="mailto:maimi.mirbach@gmx.de"><div class="button">Contact</div></a>
-        <a class="menu" href="impressum.html"><div class="button">Impressum</div></a>
       </div>
     </div>
 
+<div class="space">
+</div>
 
-    <div id="fotography" class="gallery">
-    <p class="welcome"><span class="bigger">WILLKOMMEN...</span><br>
-      Diese Seite bekommt momentan noch den letzten Schliff.<br>
-      Schau' dich trotzdem schonmal um. <br>
-      Um mehr zu sehen, einfach runterscrollen<br>
-      und durchklicken!</p>
-    </div>
+<div class="space">
+</div>
 
-<a href="fotografie.html"><div class="gallery">
-  <p><span class="bigger">FOTOGRAFIE</span></p>
-</div></a>
-
-
-<a href="illustrationen.html"><div id="fotography" class="gallery">
-  <p><span class="bigger">SKIZZEN</span></p>
-</div></a>
-
-  <a href="typografie.html"><div class="gallery">
-<p><span class="bigger">TYPOGRAFIE</span></p>
-</div></a>
-
-
-<div class="space"></div>
-<div class="impressum">
-  <div class="left">
-    <p>Mai Mi<br>
-      ein Projekt für die<br>
-      HTW-Berlin<br>
-      s0553050@htw-berlin.de<br></p>
-  </div>
+<div class="pappe">
+  <a class="mouseover" href="sketches.html"><img class="navimg" src="images/pappe/mann.jpg"
+    onmouseover="src='images/home/aufgeklebtes.jpg'" onmouseout="src='images/pappe/mann.jpg'"/></a>
+  <a class="mouseover" href="illustrationen.html"><img class="navimg-quer" src="images/skribbletwo.jpg" onmouseover="src='images/home/skizzenbuch.jpg'" onmouseout="src='images/skribbletwo.jpg'"/></a>
+  <img class="navimg" src="images/profil.jpg" onmouseover="src='images/home/uebermich.jpg'" onmouseout="src='images/profil.jpg'"/>
+<p><span class="bigger">WILLKOMMEN...</span><br>
+  Diese Seite bekommt momentan noch den letzten Schliff.<br>
+  Schau' dich trotzdem schonmal um. <br>
+  Um mehr zu sehen, einfach runterscrollen<br>
+  und durchklicken!</p>
+</div>
 
 </body>
-
 </html>
