--- a/about.html
+++ b/about.html
@@ -32,13 +32,15 @@
 <div class="space">
 </div>
 
-<div class="pappe">
-  <img src="images/maimicover.jpg"/>
-  <p><span class="bigger">Über mich...</span><br>
-    gibt es bisher nicht sonderlich viel zu sagen. <br>
-    Ich hoffe, dass sich das in ferner Zukunft mal ändern wird,<br>
-    aber bis dahin bleibt diese Seite erstmal <span class="bigger">blank!</span><br>
+<div class="wrapper">
+  <div class="about">
+    <div class="box"><p><span class="bigger">Über mich...</span><br>
+      gibt es bisher nicht viel zu sagen.<br>
+    </div>
+    <div class="box">
+      <img src="images/about.jpg"/>
+    </div>
 </div>
-
+</div>
 </body>
 </html>
