--- a/sketches.html
+++ b/sketches.html
@@ -10,6 +10,10 @@
 
 
 <link href="css/stylesheet.css" rel="stylesheet" media="screen, projection"/>
+
+<link rel="stylesheet" href="https://npmcdn.com/flickity@1.1/dist/flickity.css">
+<script src="https://npmcdn.com/flickity@1.1/dist/flickity.pkgd.js"></script>
+
 <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 
@@ -29,28 +33,26 @@
 </div>
 
 <div class="pappe">
-  <img class="collage" src="images/pappe/mann.jpg"/>
+<div class="gallery js-flickity">
+  <div class="gallery-cell">
+    <img class="collage" src="images/pappe/mann.jpg"/>
+  </div>
+  <div class="gallery-cell">
+    <img class="collage" src="images/pappe/arbeit.jpg"/>
+  </div>
+  <div class="gallery-cell">
+    <img class="collage" src="images/pappe/stil.jpg"/>
+  </div>
+  <div class="gallery-cell">
+    <img class="collage" src="images/pappe/kind.jpg"/>
+  </div>
+  <div class="gallery-cell">
+    <img class="collage" src="images/pappe/cool.jpg"/>
+  </div>
+  <div class="gallery-cell">
+    <img class="collage" src="images/pappe/frau.jpg"/>
+  </div>
 </div>
-
-<div class="pappe">
-  <img class="collage" src="images/pappe/arbeit.jpg"/>
 </div>
-
-<div class="pappe">
-  <img class="collage" src="images/pappe/stil.jpg"/>
-</div>
-
-<div class="pappe">
-  <img class="collage" src="images/pappe/kind.jpg"/>
-</div>
-
-<div class="pappe">
-  <img class="collage" src="images/pappe/cool.jpg"/>
-</div>
-
-<div class="pappe">
-  <img class="collage" src="images/pappe/frau.jpg"/>
-</div>
-
 </body>
 </html>
