--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
       gibt es bisher nicht viel zu sagen.<br>
     </div>
     <div class="box">
-      <img src="images/about.jpg"/>
+      <img class="box" src="images/about.jpg"/>
     </div>
 </div>
 </div>
