--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <a class="mouseover" href="sketches.html"><img class="navimg" src="images/pappe/mann.jpg"
     onmouseover="src='images/home/aufgeklebtes.jpg'" onmouseout="src='images/pappe/mann.jpg'"/></a>
   <a class="mouseover" href="illustrationen.html"><img class="navimg-quer" src="images/skribbletwo.jpg" onmouseover="src='images/home/skizzenbuch.jpg'" onmouseout="src='images/skribbletwo.jpg'"/></a>
-  <img class="navimg" src="images/profil.jpg" onmouseover="src='images/home/uebermich.jpg'" onmouseout="src='images/profil.jpg'"/>
+  <a class="mouseover" href="about.html"><img class="navimg" src="images/profil.jpg" onmouseover="src='images/home/uebermich.jpg'" onmouseout="src='images/profil.jpg'"/></a>
 <p><span class="bigger">WILLKOMMEN...</span><br>
   Diese Seite bekommt momentan noch den letzten Schliff.<br>
   Schau' dich trotzdem schonmal um. <br>
