--- a/about.html
+++ b/about.html
@@ -34,11 +34,12 @@
 
 <div class="wrapper">
   <div class="about">
-    <div class="box"><p><span class="bigger">Über mich...</span><br>
-      gibt es bisher nicht viel zu sagen.<br>
-    </div>
     <div class="box">
       <img class="box" src="images/about.jpg"/>
+    </div>
+
+    <div class="box"><p><span class="bigger">Über mich...</span><br>
+      kommt bald.<br>
     </div>
 </div>
 </div>
