--- a/about.html
+++ b/about.html
@@ -21,11 +21,22 @@
 
   <div class="header">
       <div class="bothbuttons">
-        <a class="menu" href="index.html"><div class="button">Home</div></a>
-        <a class="menu" href="mailto:maimi.mirbach@gmx.de"><div class="button">Contact</div></a>
-      </div>
-    </div>
 
+  <nav id="primary_nav_wrap">
+      <ul>
+        <li><a href="index.html">Home</a>
+          <ul>
+            <li><a href="sketches.html">"Aufgeklebtes"</a></li>
+            <li><a href="illustrationen.html">aus dem Skizzenbuch</a></li>
+            <li><a href="about.html">Über mich</a></li>
+          </ul>
+        </li>
+        <li><a href="mailto:maimi.mirbach@gmx.de">Contact</a>
+      </ul>
+
+    </div>
+  </div>
+  
 <div class="space">
 </div>
 
