nav_to_the_front

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   <div class="header">
       <div class="bothbuttons">
 
-  <nav id="primary_nav_wrap">
+  <nav id="nav_bar">
       <ul>
         <li><a href="index.html">Home</a>
           <ul>
@@ -36,7 +36,7 @@
 
     </div>
   </div>
-  
+
 <div class="space">
 </div>
 
@@ -45,14 +45,30 @@
 
 <div class="wrapper">
   <div class="about">
+
     <div class="box">
       <img class="box" src="images/about.jpg"/>
     </div>
 
-    <div class="box"><p><span class="bigger">Über mich...</span><br>
-      kommt bald.<br>
+    <div class="box-zwei"><p><span class="bigger">Über mich...</span><br>
+      Ich studiere seit Kurzem Kommunikationsdesign<br>
+      an der HTW Berlin. Noch gibt es nicht sonderlich viel über mich zu sagen.<br>
+      Ich leb hier so vor mich hin; zeichne, gehe zur Uni und jobbe nebenbei und
+      freue mich natürlich, wenn euch diese Seite gefällt.<br>
+
+      </p>
     </div>
+
+
 </div>
 </div>
+
+<div class="impressum">
+  <p>Ein Projekt für die<br>
+    HTW-Berlin<br>
+    Mai Mi<br>
+    s0553050@htw-berlin.de
+</div>
+
 </body>
 </html>
