--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="header">
       <div class="bothbuttons">
 
-        <nav id="primary_nav_wrap">
+        <nav id="nav_bar">
             <ul>
               <li><a href="index.html">Home</a>
                 <ul>
@@ -51,6 +51,16 @@
 <p><span class="bigger">WILLKOMMEN...</span><br>
   Diese Seite bekommt momentan noch den letzten Schliff.<br>
   Schau' dich trotzdem schonmal um. <br>
+</div>
+
+<div class="grey">
+<div class="impressum">
+  <p>Ein Projekt für die<br>
+    HTW-Berlin<br>
+    Mai Mi<br>
+    s0553050@htw-berlin.de
+  </p>
+</div>
 </div>
 
 </body>
