--- a/sketches.html
+++ b/sketches.html
@@ -25,7 +25,7 @@
   <div class="header">
       <div class="bothbuttons">
 
-  <nav id="primary_nav_wrap">
+  <nav id="nav_bar">
       <ul>
         <li><a href="index.html">Home</a>
           <ul>
@@ -71,5 +71,13 @@
   </div>
 </div>
 </div>
+
+<div class="impressum">
+  <p>Ein Projekt für die<br>
+    HTW-Berlin<br>
+    Mai Mi<br>
+    s0553050@htw-berlin.de
+</div>
+
 </body>
 </html>
