--- a/illustrationen.html
+++ b/illustrationen.html
@@ -21,7 +21,7 @@
   <div class="header">
       <div class="bothbuttons">
 
-  <nav id="primary_nav_wrap">
+  <nav id="nav_bar">
       <ul>
         <li><a href="index.html">Home</a>
           <ul>
@@ -50,6 +50,13 @@
     <div class="scroll-box">
       <img class="scrollbar-fineliner" src="images/illus/scrollbarfineliner.jpg"/>
     </div>
+  </div>
+
+  <div class="impressum">
+    <p>Ein Projekt für die<br>
+      HTW-Berlin<br>
+      Mai Mi<br>
+      s0553050@htw-berlin.de
   </div>
 
 </body>
