--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                   <li><a href="about.html">Über mich</a></li>
                 </ul>
               </li>
-              <li><a href="mailto:maimi.mirbach@gmx.de">Contact</a>
+              <li class="contact"><a href="mailto:maimi.mirbach@gmx.de">Contact</a>
+              <li class="call"><a href="tel:+4915207524399">Anruf</a>
             </ul>
 
       </div>
