--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
 <div class="space">
 </div>
 
+<div class="space">
+</div>
+
+<div class="space">
+</div>
+
+
 <div class="pappe">
   <a class="mouseover" href="sketches.html"><img class="navimg" src="images/pappe/mann.jpg"
     onmouseover="src='images/home/aufgeklebtes.jpg'" onmouseout="src='images/pappe/mann.jpg'"/></a>
