--- a/illustrationen.html
+++ b/illustrationen.html
@@ -30,7 +30,7 @@
             <li><a href="about.html">Über mich</a></li>
           </ul>
         </li>
-        <li><a href="mailto:maimi.mirbach@gmx.de">Contact</a>
+        <li class="contact"><a href="mailto:maimi.mirbach@gmx.de">Contact</a>
         <li class="call"><a href="tel:+4915207524399">Anruf</a>
       </ul>
 
@@ -53,12 +53,6 @@
     </div>
   </div>
 
-  <div class="impressum">
-    <p>Ein Projekt für die<br>
-      HTW-Berlin<br>
-      Mai Mi<br>
-      s0553050@htw-berlin.de
-  </div>
 
 </body>
 </html>
