--- a/about.html
+++ b/about.html
@@ -45,20 +45,15 @@
 </div>
 
 <div class="wrapper">
-  <div class="about">
+  <div class="pappe">
+    <a class="mouseover" href="#"><img class="aboutimg" src="images/about/studium.jpg" onmouseover="src='images/about/studium_hover.jpg'" onmouseout="src='images/about/studium.jpg'"/></a>
+    <a class="mouseover" href="#"><img class="aboutimg" src="images/about/erfahrungen.jpg" onmouseover="src='images/about/erfahrungen_hover.jpg'" onmouseout="src='images/about/erfahrungen.jpg'"/></a>
+    <a class="mouseover" href="#"><img class="aboutimg" src="images/about/sprachen.jpg"
+      onmouseover="src='images/about/sprachen_hover.jpg'" onmouseout="src='images/about/sprachen.jpg'"/></a>
 
-    <div class="box">
-      <img class="box" src="images/about.jpg"/>
-    </div>
 
-    <div class="box-zwei"><p><span class="bigger">Über mich...</span><br>
-      Ich studiere seit Kurzem Kommunikationsdesign<br>
-      an der HTW Berlin. Noch gibt es nicht sonderlich viel über mich zu sagen.<br>
-      Ich leb hier so vor mich hin; zeichne, gehe zur Uni und jobbe nebenbei und
-      freue mich natürlich, wenn euch diese Seite gefällt.<br>
+  </div>
 
-      </p>
-    </div>
 
 
 </div>
