--- a/about.html
+++ b/about.html
@@ -44,6 +44,12 @@
 <div class="space">
 </div>
 
+<div class="space">
+</div>
+
+<div class="space">
+</div>
+
 <div class="wrapper">
   <div class="pappe">
     <a class="mouseover" href="#"><img class="aboutimg" src="images/about/studium.jpg" onmouseover="src='images/about/studium_hover.jpg'" onmouseout="src='images/about/studium.jpg'"/></a>
