--- a/sketches.html
+++ b/sketches.html
@@ -56,13 +56,16 @@
     <img class="collage" src="images/pappe/mann.jpg"/>
   </div>
   <div class="gallery-cell">
-    <img class="collage" src="images/pappe/arbeit.jpg"/>
-  </div>
-  <div class="gallery-cell">
     <img class="collage" src="images/pappe/stil.jpg"/>
   </div>
   <div class="gallery-cell">
+    <img class="collage" src="images/pappe/cool.jpg"/>
+  </div>
+  <div class="gallery-cell">
     <img class="collage" src="images/pappe/kind.jpg"/>
+  </div>
+  <div class="gallery-cell">
+    <img class="collage" src="images/pappe/arbeit.jpg"/>
   </div>
   <div class="gallery-cell">
     <img class="collage" src="images/pappe/cool.jpg"/>
